--- a/.github/workflows/hexlet-ci-workflow.yml
+++ b/.github/workflows/hexlet-ci-workflow.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps: # список шагов, которые надо выполнить
-      - run: make setup
-      - run: make test
-      - run: lint
+      - run: npm install
+      - run: npm test
+      - run: npx eslint .
 
