--- a/.github/workflows/hexlet-ci-workflow.yml
+++ b/.github/workflows/hexlet-ci-workflow.yml
@@ -4,6 +4,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps: # список шагов, которые надо выполнить
+      - uses: actions/checkout@v2
+      - uses: shivammathur/setup-php@v2
       - run: npm install
       - run: npm test
       - run: npx eslint .
